--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -274,7 +274,7 @@
  FLEET_MANAGER_VIEW_REINFORCE_ALL:0 "เสริมกำลังทั้งหมด"
  FLEET_MANAGER_VIEW_NO_REINFORCE_TEXT:0 "§Gไม่มีกองยานใดที่ต้องการกำลังเสริม§!"
  FLEET_MANAGER_VIEW_REINFORCE_TEXT:2 "$NUMFLEETS|Y$ §Hกองยาน§! จำเป็นต้องเสริมด้วยยาน $NUMSHIPS|R$ ลำ ค่าใช้จ่าย $COST|H$"
- FLEET_MANAGER_VIEW_REINFORCE_COST:2 "We can currently afford to reinforce $NUMSHIPS|Y$ Ship(s) for $COST|H$"
+ FLEET_MANAGER_VIEW_REINFORCE_COST:2 "ขณะนี้เราสามารถเสริมกำลังยาน $NUMSHIPS|Y$ ลำ ค่าใช้จ่าย $COST|H$"
  FLEET_MANAGER_VIEW_REINFORCE_COST_NONE:2 "£alloys£ §H0§!"
  FLEET_MANAGER_CHOOSE_DESIGN:0 "เลือกการออกแบบ"
  FLEET_MANAGER_BUILD_QUEUE:0 "คิวสร้าง"
@@ -305,8 +305,8 @@
  DECREASE_HEADER:0 "§Hลด§!"
  DECREASE_FM:5 "$DECREASE_HEADER$\n§GClick to decrease the number of ships of this design to be used in this fleet§!\n§YShift-click§! to decrease to the previous multiple of 10, §YControl-click§! to remove all ships"
  INCREASE_FM:5 "$INCREASE_HEADER$\n§GClick to increase the number of ships of this design to be used in this fleet§!\n§YShift-click§! to increase to the next multiple of 10, §YControl-click§! to add the maximum possible amount of ships"
- REINFORCE_ALL_FM:1 "§HReinforce All§!\n§GClick to reinforce all current fleets to full capacity§!"
- ADD_DESIGN_FM:2 "§HAdd Ship Design to Fleet§!\n§GClick to add a new ship design to this fleet§!"
+ REINFORCE_ALL_FM:1 "§Hเสริมกำลังทั้งหมด§!\n§Gคลิกเพื่อเสริมกองยานปัจจุบันทั้งหมดให้เต็มความจุ§!"
+ ADD_DESIGN_FM:2 "§Hเพิ่มการออกแบบยานไปที่กองยาน§!\n§Gคลิกเพื่อเพิ่มการออกแบบยานใหม่ให้กับกองยานนี้§!"
  FLEET_VIEW_RALLY_TROOPS_TITLE:0 "§Hระดมพล§!"
  FLEET_VIEW_RALLY_TROOPS_ENABLED:0 "ปัจจุบัน §Yเปิด§!"
  FLEET_VIEW_RALLY_TROOPS_DISABLED:0 "ปัจจุบัน §Yปิด§!"
@@ -371,7 +371,7 @@
  pc_ringworld_shielded_desc:0 "This Ring World segment is encased in some kind of impenetrable energy barrier. It blocks all scans of the surface."
  pc_habitat_shielded:0 "Shielded Habitat"
  pc_habitat_shielded_desc:0 "This Habitat station is encased in some kind of impenetrable energy barrier. It blocks all scans of its interior."
- FLEETORDER_EXPLORE_BUTTON:0 "สำรวจระบบใหม่ที่ยังไม่เคยถูกสำรวจ"
+ FLEETORDER_EXPLORE_BUTTON:0 "เดินทางไประบบใหม่ที่ยังไม่เคยถูกสำรวจ"
  planet_destruction.101.name:0 "World Cracked"
  planet_destruction.102.name:0 "Cracking Open a Cold One"
  planet_destruction.101.desc:0 "The [From.From.GetName]'s gentle rocking - buffeted by [From.GetName]'s rupturing crust and unraveling magnetosphere - subsides as the Colossus completes its cataclysmic task.\n\nThe sheer violence of a dying planet is difficult to comprehend, but the funereal beauty of [From.GetName]'s molten core cooling in gelid space is undeniable."
