--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -401,7 +401,7 @@
  PLANETARY_DEFICIT:0 "การขาดดุลของดาวเคราะห์"
  PLANETARY_INPUT:0 "ค่าบำรุงรักษาที่เป็นทรัพยากร"
  DECISIONS_TITLE:0 "ตัดสินใจ"
- DECISIONS_TOOLTIP:0 "§SDecisions§!\nThese are planet-specific orders or practices that can be temporarily enforced by spending some of our resources."
+ DECISIONS_TOOLTIP:0 "§Sตัดสินใจ§!\nนี่คือคำสั่งหรือแนวทางปฏิบัติเฉพาะดาวเคราะห์ที่สามารถบังคับใช้ได้ชั่วคราวโดยใช้ทรัพยากรบางส่วนของเรา"
  GOVERNOR_TITLE:0 "ผู้ว่าการ"
  TERRAFORM_TITLE:0 "ปรับสภาพดาว"
  BUILDING_DETAILS_TITLE:0 "ข้อมูลสิ่งปลูกสร้าง"
@@ -1346,22 +1346,22 @@
  job_xeno_zoo_animal:0 "Conserved Fauna"
  job_xeno_zoo_animal_plural:0 "$job_xeno_zoo_animal$"
  job_xeno_zoo_animal_desc:0 "These near-intelligent fauna are cared for and studied in a controlled environment, ensuring their conservation."
- job_xeno_zoo_animal_effect_desc:0 "£job_xeno_zoo_animal£ $job_xeno_zoo_animal_plural$ consume $r_food$ (or $r_minerals$) and provide $r_amenities$"
+ job_xeno_zoo_animal_effect_desc:0 "£job_xeno_zoo_animal£ $job_xeno_zoo_animal_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_xeno_zoo_animal_add:0 "$job_xeno_zoo_animal$ Jobs"
  job_xeno_zoo_beast:0 "Gladiatorial Beast"
  job_xeno_zoo_beast_plural:0 "Gladiatorial Beasts"
  job_xeno_zoo_beast_desc:0 "These beasts are pitted in combat against our warriors, entertaining the masses while keeping the bestial population at sustainable levels."
- job_xeno_zoo_beast_effect_desc:0 "£job_xeno_zoo_beast£ $job_xeno_zoo_beast_plural$ consume $r_food$ (or $r_minerals$) and provide $r_amenities$"
+ job_xeno_zoo_beast_effect_desc:0 "£job_xeno_zoo_beast£ $job_xeno_zoo_beast_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_xeno_zoo_beast_add:0 "$job_xeno_zoo_beast$ Jobs"
  job_livestock_zoo_animal:0 "Protected Fauna"
  job_livestock_zoo_animal_plural:0 "$job_livestock_zoo_animal$"
  job_livestock_zoo_animal_desc:0 "These xenos are cared for and studied in a controlled environment, ensuring their conservation."
- job_livestock_zoo_animal_effect_desc:0 "£job_livestock_zoo_animal£ $job_livestock_zoo_animal_plural$ consume $r_food$ (or $r_minerals$) and provide $r_amenities$"
+ job_livestock_zoo_animal_effect_desc:0 "£job_livestock_zoo_animal£ $job_livestock_zoo_animal_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_livestock_zoo_animal_add:0 "$job_livestock_zoo_animal$ Jobs"
  job_livestock_zoo_beast:0 "Gladiatorial Xeno"
  job_livestock_zoo_beast_plural:0 "Gladiatorial Xenos"
  job_livestock_zoo_beast_desc:0 "These xenos are pitted in combat against our warriors, entertaining the masses while keeping the bestial population at sustainable levels."
- job_livestock_zoo_beast_effect_desc:0 "£job_livestock_zoo_beast£ $job_livestock_zoo_beast_plural$ consume $r_food$ (or $r_minerals$) and provide $r_amenities$"
+ job_livestock_zoo_beast_effect_desc:0 "£job_livestock_zoo_beast£ $job_livestock_zoo_beast_plural$ บริโภค $r_food$ (หรือ $r_minerals$) และให้ $r_amenities$"
  mod_job_livestock_zoo_beast_add:0 "$job_livestock_zoo_beast$ Jobs"
  job_zoo_beast_name_plural_with_icon:0 "§Y£job_livestock_zoo_beast£ $job_livestock_zoo_beast_plural$§! and §Y$job_xeno_zoo_beast_plural$§!"
  job_zoo_animal_name_plural_with_icon:0 "§Y£job_livestock_zoo_animal£ $job_livestock_zoo_animal$§! and §Y$job_xeno_zoo_animal$§!"
@@ -1662,7 +1662,7 @@
  mod_station_researchers_produces_mult:0 "ผลผลิตของสถานีวิจัย"
  MOD_COUNTRY_ADMIN_CAP_ADD:1 "ความสามารถในการบริหาร"
  MOD_COUNTRY_ADMIN_CAP_MULT:0 "$MOD_COUNTRY_ADMIN_CAP_ADD$"
- mod_diplomacy_upkeep_mult:2 "Diplomatic Agreement Upkeep"
+ mod_diplomacy_upkeep_mult:2 "ค่าบำรุงรักษาข้อตกลงทางการทูต"
  mod_diplomacy_influence_upkeep_mult:0 "Diplomatic Agreement Influence Upkeep"
  mod_pop_factions_influence_produces_mult:0 "ได้รับอิทธิพลจากกลุ่มการเมือง"
  mod_pop_factions_influence_produces_add:0 "$mod_pop_factions_influence_produces_mult$"
@@ -2430,7 +2430,7 @@
  mod_edicts_cost_mult:0 "ค่าใช้จ่ายของประกาศคำสั่ง"
  mod_leaders_cost_mult:0 "ค่าใช้จ่ายในการจ้างผู้นำ"
  MOD_LEADER_COST_EMPIRE_SIZE_MULT:0 "ค่าใช้จ่ายในการจ้างผู้นำ"
- mod_leaders_upkeep_mult:0 "ค่าบำรุงรักษาผู้นำ"
+ mod_leaders_upkeep_mult:0 "ค่าบำรุงรักษาผู้นำ (เงินเดือน)"
  MOD_LEADER_UPKEEP_EMPIRE_SIZE_MULT:0 "ค่าบำรุงรักษาผู้นำ"
  CONSUMED:0 "ใช้: $VALUE|+=$"
  MONTHLY_TRADE_TT:0 "การซื้อขายรายเดือน: $VALUE|+=$"
