--- a/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_enclaves_l_english.yml
@@ -23,18 +23,18 @@
  enclave.100.a:0 "What mysteries lie beyond the veil?"
  enclave.2.name:0 "Mercenary Enclave Foundation"
  enclave.2.desc:2 "We are debating whether or not to help set up the [fleet.GetName] as an independent §YMercenary Enclave§!. The proposal, first put forward by the fleet commanders, would result in us losing control of the fleet. We would also be responsible for providing them with a sizeable investment in §YEnergy Credits§! and §YAlloys§!. In return, they would give us a number of shares in the company. These would come with periodic dividends and special privileges.\n\nThey assure us that in times of need, they will always be ready to fight for us. And our money."
- enclave.2.tooltip.a:0 "Fleet needs an admiral"
- enclave.2.tooltip.aa:0 "Fleet has an admiral"
- enclave.2.tooltip.cloak:0 "All ships in this fleet must be incapable of Cloaking."
- enclave.2.tooltip.b:1 "There is already an enclave here"
- enclave.2.tooltip.bb:1 "No other enclave in system"
- enclave.2.tooltip.c:0 "System must be under our control"
- enclave.2.tooltip.cc:0 "System is under our control"
- enclave.2.tooltip.d:0 "No free mercenary capacity"
- enclave.2.tooltip.dd:0 "Mercenary capacity available"
- enclave.2.tooltip.e:1 "System requires an asteroid or a moon"
- enclave.2.tooltip.ee:1 "System has an asteroid or a moon"
- enclave.2.tooltip.f:0 "We must be the owner of this fleet"
+ enclave.2.tooltip.a:0 "กองยานต้องมีผู้บังคับการ"
+ enclave.2.tooltip.aa:0 "กองยานมีผู้บังคับการ"
+ enclave.2.tooltip.cloak:0 "ยานทุกลำในกองยานนี้จะต้องไม่สามารถพรางตัวได้"
+ enclave.2.tooltip.b:1 "ที่นี่มี enclave อยู่แล้ว"
+ enclave.2.tooltip.bb:1 "ไม่มี Enclave อื่นๆในระบบ"
+ enclave.2.tooltip.c:0 "ระบบต้องอยู่ภายใต้การควบคุมของเรา"
+ enclave.2.tooltip.cc:0 "ระบบอยู่ภายใต้การควบคุมของเรา"
+ enclave.2.tooltip.d:0 "ความจุของกองยานทหารรับจ้างมีไม่เพียงพอ"
+ enclave.2.tooltip.dd:0 "มีความจุของกองยานทหารรับจ้างเพียงพอ"
+ enclave.2.tooltip.e:1 "ระบบต้องมีดาวเคราะห์น้อยหรือดวงจันทร์(ดาวบริวาร)"
+ enclave.2.tooltip.ee:1 "ระบบมีดาวเคราะห์น้อยหรือดวงจันทร์(ดาวบริวาร)"
+ enclave.2.tooltip.f:0 "เราต้องเป็นเจ้าของกองยานนี้"
  enclave.2.a.tooltip:0 "A Mercenary Enclave is founded."
  enclave.25:0 "Mercenary Enclave Destroyed"
  enclave.25.desc:1 "Our fleet has overcome the defenses of the mercenaries in [merc_system.GetName], and their station has been blown to pieces. The rest of the [FROM.GetName] collapsed quickly after, and their remaining fleets have disbanded. While some of the surviving captains may turn to piracy, others have announced their plans to honor smaller contracts, offering logistical support or space station garrisoning. But such trifling affairs are of little consequence. The important fact is that the Mercenary Enclave is no more, and from its wreckage we have been able to salvage a sizable amount of resources."
