--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -20,7 +20,7 @@
  empire_capital_world:0 "Empire Capital"
  sector_capital_world:0 "Sector Capital"
  TOO_CLOSE_TO_ANOTHER_SECTOR_CAPITAL:0 "Sector Capitals need to be at least 5 jumps apart."
- EXPERIENCE_GAIN_RATE_TITLE:0 "§EExperience Gain Rate:§!"
+ EXPERIENCE_GAIN_RATE_TITLE:0 "§Eอัตราการได้รับประสบการณ์:§!"
  DISMISS_LEADER_COST:0 "§Gค่าใช้จ่าย: $COST$§!"
  CAN_NOT_AFFORD_DISMISSING_LEADER:0 "§RCan't afford the cost of $COST$§!"
  RECRUIT_LEADER_AT_CAP_TITLE:0 "ผู้นำเต็มความจุ"
@@ -99,7 +99,7 @@
  AUTOMATION_ANOMALIES_ENABLED:0 "$AUTOMATION_ANOMALIES$ £trigger_yes£"
  AUTOMATION_DIGSITES_ENABLED:0 "$AUTOMATION_DIGSITES$ £trigger_yes£"
  AUTOMATION_SPECIAL_PROJECTS_ENABLED:0 "$AUTOMATION_SPECIAL_PROJECTS$ £trigger_yes£"
- AUTOMATION_EXPLORE:0 "ไปยังระบบดาวใหม่ๆที่ยังไม่เคยถูกสำรวจ"
+ AUTOMATION_EXPLORE:0 "ไปยังระบบที่ยังไม่เคยถูกสำรวจ"
  AUTOMATION_SURVEY:0 "สำรวจระบบดาวโดยละเอียด"
  AUTOMATION_ANOMALIES:0 "ตรวจสอบความผิดปกติ"
  AUTOMATION_DIGSITES:0 "ขุดค้นแหล่งโบราณคดี"
@@ -119,7 +119,7 @@
  CLICK_TO_RECRUIT_AND_ASSIGN:0 "คลิกเพื่อสรรหาและแต่งตั้ง"
  DISMISS_LEADER_COST_DESC:0 "Dismissing this leader will cost $COST$"
  CLICK_TO_ASSIGN_LEADER:1 "§Gคลิกเพื่อแต่งตั้ง§!"
- can_not_dismiss_rulers:1 "§RCan't Dismiss Ruler§!"
+ can_not_dismiss_rulers:1 "§Rไม่สามารถปลดผู้ปกครองได้§!"
  NO_CLASS_LEADER_AVAILABLE:0 "No Leader of class $CLASS|Y$ available"
  NO_LEADER_AVAILABLE:0 "No Leader available"
  LEADER_IS_MIA:0 "$NAME|Y$ §Ris Missing In Action.§!"
@@ -155,17 +155,17 @@
  MOD_COUNCIL_AGENDA_FINISHING_EFFECT_DURATION_MULT:0 "ระยะเวลาของเอฟเฟกต์แผนการของสภา"
  CHANGE_AGENDA:0 "เปลี่ยนแผนการของสภา?"
  CHANGE_AGENDA_DESC:0 "ความคืบหน้าในวาระปัจจุบันจะหายไป"
- NO_AGENDA_SELECTED:0 "No Agenda Set"
+ NO_AGENDA_SELECTED:0 "ไม่ได้กำหนดแผน"
  LAUNCH_AGENDA:0 "เริ่มแผนการ"
  LAUNCH_EARLY:0 "เริ่มก่อนเวลาที่กำหนด"
  LAUNCH_AGENDA_EARLY:1 "$LAUNCH_EARLY$ £unity£"
  CLICK_TO_OPEN_AGENDA_LIST:1 "§Gคลิกเพื่อดูรายการวาระ(แผนการ)ต่างๆ§!"
- CLICK_TO_ACTIVATE_AGENDA:0 "§H$LAUNCH_AGENDA$§!\n§GClick to Launch Agenda§!"
+ CLICK_TO_ACTIVATE_AGENDA:0 "§H$LAUNCH_AGENDA$§!\n§Gคลิกเพื่อเริ่มแผนการ§!"
  CLICK_TO_SELECT_AGENDA:0 "§GClick to Select§!"
  CLICK_TO_SET_AGENDA:0 "§Gคลิกเพื่อกำหนดเป็นแผนนี้§!"
  CLICK_TO_EARLY_ACTIVATE_AGENDA:0 "§H$LAUNCH_EARLY$§!\n§Gคลิกเพื่อจ่ายและเริ่มแผนการ§!\n\nค่าใช้จ่าย: $COST|Y$"
  CAN_NOT_AFFORD_AGENDA_COST:0 "§H$LAUNCH_EARLY$§!\n£trigger_no£ไม่สามารถเริ่มแผนได้\n\nค่าใช้จ่าย: $COST|Y$"
- AGENDA_PROGRESS_BAR_FINISHED_TOOLTIP:0 "แผนการพร้อมจะเริ่มแล้ว\n§GCคลิกปุ่ม §H$LAUNCH_AGENDA$§! เพื่อเปิดใช้งาน§!"
+ AGENDA_PROGRESS_BAR_FINISHED_TOOLTIP:0 "แผนการพร้อมจะเริ่มแล้ว\n§Gคลิกปุ่ม §H$LAUNCH_AGENDA$§! เพื่อเปิดใช้งาน§!"
  COUNCIL_AGENDA_ETHIC:0 "§Eจริยธรรม:§! $ETHIC$"
  COUNCIL_AGENDA_INITIAL_EFFECT_CUSTOM_LOC_TITLE:0 "§Eผลเมื่อเริ่มต้น:§!"
  COUNCIL_AGENDA_START_MODIFIER_TITLE:0 "§Eตั้งต้น:§!"
@@ -275,7 +275,7 @@
  ONE_CLASS_COUNCIL_TYPE:0 "Council Position for $CLASS$"
  ANY_CLASS_COUNCIL_TYPE:0 "Council Position for Any/All Classes"
  INACTIVE_CIVIC:0 "§RDisabled due to Inactive Civic $CIVIC|Y$§!"
- LEADER_ASSIGNMENT_INSTRUCTIONS:0 "§GClick to Assign a Leader, Right Click to Remove the Leader§!"
+ LEADER_ASSIGNMENT_INSTRUCTIONS:0 "§Gคลิกเพื่อแต่งตั้งผู้นำ คลิกขวาเพื่อปลดผู้นำ§!"
  LEADER_ACTIVITY:0 "§YCurrent Activity:§! $ACTIVITY$"
  NO_TRAIT_SELECTED:0 "เลือกคุณลักษณะ"
  LEADER_MISSING_ASSIGNMENT:0 "§Hว่าง§!\nรอการแต่งตั้ง"
@@ -617,14 +617,14 @@
  scientists_cost_mod:0 "Employed Scientists"
  governors_cost_mod:0 "Employed Governors"
  generals_cost_mod:0 "Employed Generals"
- mod_leader_admirals_cost_mult:1 "$admiral_with_icon$ Leader Cost"
- mod_leader_generals_cost_mult:1 "$general_with_icon$ Leader Cost"
- mod_leader_scientists_cost_mult:1 "$scientist_with_icon$ Leader Cost"
- mod_leader_governors_cost_mult:1 "$governor_with_icon$ Leader Cost"
- mod_leader_admirals_upkeep_mult:1 "$admiral_with_icon$ Leader Upkeep"
- mod_leader_generals_upkeep_mult:1 "$general_with_icon$ Leader Upkeep"
- mod_leader_scientists_upkeep_mult:1 "$scientist_with_icon$ Leader Upkeep"
- mod_leader_governors_upkeep_mult:1 "$governor_with_icon$ Leader Upkeep"
+ mod_leader_admirals_cost_mult:1 "ค่าใช้จ่ายในการจ้างผู้นำ $admiral_with_icon$"
+ mod_leader_generals_cost_mult:1 "ค่าใช้จ่ายในการจ้างผู้นำ $general_with_icon$"
+ mod_leader_scientists_cost_mult:1 "ค่าใช้จ่ายในการจ้างผู้นำ $scientist_with_icon$"
+ mod_leader_governors_cost_mult:1 "ค่าใช้จ่ายในการจ้างผู้นำ $governor_with_icon$"
+ mod_leader_admirals_upkeep_mult:1 "ค่าบำรุงรักษาผู้นำ (เงินเดือน) $admiral_with_icon$"
+ mod_leader_generals_upkeep_mult:1 "ค่าบำรุงรักษาผู้นำ (เงินเดือน) $general_with_icon$"
+ mod_leader_scientists_upkeep_mult:1 "ค่าบำรุงรักษาผู้นำ (เงินเดือน) $scientist_with_icon$"
+ mod_leader_governors_upkeep_mult:1 "ค่าบำรุงรักษาผู้นำ (เงินเดือน) $governor_with_icon$"
  LEADER_UPKEEP:0 "$VALUE$"
  LEADER_UPKEEP_WITH_TEXT:0 "Upkeep: $VALUE$"
  LEADER_COST:1 "ค่าใช้จ่าย: $VALUE|Y$"
@@ -1149,11 +1149,11 @@
  leader_trait_guardian_2_desc:0 "$leader_trait_guardian_desc$"
  leader_trait_conscripter:1 "Conscription Agent"
  leader_trait_conscripter_desc:1 "This leader knows how to handle recruits and streamline the process of enlisting new volunteers into the army."
- leader_trait_interrogator:0 "Interrogator"
- leader_trait_interrogator_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$On Winning Ground Combat as Attacker:\n$tt$ $INTEL$ on enemy Empire: §G+10§!"
+ leader_trait_interrogator:0 "นักสอบสวน"
+ leader_trait_interrogator_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$เมื่อชนะการรบภาคพื้นดินในฐานะผู้โจมตี:\n$tt$ $INTEL$ ของจักรวรรดิศัตรู: §G+10§!"
  leader_trait_interrogator_desc:1 "This leader will attempt to extract valuable information from enemy prisoners."
- leader_trait_interrogator_2_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$On Winning Ground Combat as Attacker:\n$tt$ $INTEL$ on enemy Empire: §G+20§!"
- leader_trait_interrogator_3_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$On Winning Ground Combat as Attacker:\n$tt$ $INTEL$ on enemy Empire: §G+30§!"
+ leader_trait_interrogator_2_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$เมื่อชนะการรบภาคพื้นดินในฐานะผู้โจมตี:\n$tt$ $INTEL$ ของจักรวรรดิศัตรู: §G+20§!"
+ leader_trait_interrogator_3_effect:1 "$ARMY_EFFECTS_TXT$:\n$t$เมื่อชนะการรบภาคพื้นดินในฐานะผู้โจมตี:\n$tt$ $INTEL$ ของจักรวรรดิศัตรู: §G+30§!"
  leader_trait_industrial_espionage:1 "Intellectual Espionage"
  leader_trait_industrial_espionage_effect:0 "$ARMY_EFFECTS_TXT$:\n$t$On Winning Ground Combat as Attacker:\n$tt$Chance to Steal Research Option: §Y5%§!\n$ttt$Every £job_researcher£ $job_researcher$ on Planet:\n$tttt$Chance: §G+5%§!"
  leader_trait_industrial_espionage_desc:1 "This leader will try to steal any valuable data they find on a conquered planet."
