--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -93,29 +93,29 @@
  leader_trait_martinet_hive_desc:0 "A keen observer that demands strict compliance, this drone has an impeccable record when it comes to limiting deviance."
  leader_trait_martinet_machine:0 "Martinet"
  leader_trait_martinet_machine_desc:0 "With excellent observational capabilities, this drone demands strict compliance. Its record is impeccable when it comes to limiting deviance."
- trait_ruler_charismatic_hive:0 "Amplified Subprocesses"
+ trait_ruler_charismatic_hive:0 "ขยายกระบวนการย่อย"
  trait_ruler_charismatic_hive_desc:1 "This node's amplified subprocesses create more room to maneuver and expand edicts."
- trait_ruler_charismatic_machine:0 "Amplified Subprocesses"
+ trait_ruler_charismatic_machine:0 "ขยายกระบวนการย่อย"
  trait_ruler_charismatic_machine_desc:1 "This unit has amplified subprocesses that create more room to maneuver and expand edicts."
  trait_ruler_warlike_hive:0 "Warmind"
  trait_ruler_warlike_hive_desc:0 "This node is specialized for space and ground warfare."
- trait_ruler_warlike_machine:0 "War Algorithms"
+ trait_ruler_warlike_machine:0 "อัลกอริทึมสงคราม"
  trait_ruler_warlike_machine_desc:0 "This node is specialized for space and ground warfare."
  trait_ruler_warlike_2_hive:0 "$trait_ruler_warlike_hive$ II"
  trait_ruler_warlike_2_hive_desc:0 "$trait_ruler_warlike_hive_desc$"
  trait_ruler_warlike_2_machine:0 "$trait_ruler_warlike_machine$ II"
  trait_ruler_warlike_2_machine_desc:0 "$trait_ruler_warlike_machine_desc$"
- trait_ruler_logistic_understanding_hive:0 "Logistic Understanding"
+ trait_ruler_logistic_understanding_hive:0 "เข้าใจด้านโลจิสติกส์"
  trait_ruler_logistic_understanding_hive_desc:0 "This node is effective in reducing the upkeep of armies and ships."
- trait_ruler_logistic_understanding_machine:0 "Logistic Programming"
+ trait_ruler_logistic_understanding_machine:0 "โปรแกรมโลจิสติก"
  trait_ruler_logistic_understanding_machine_desc:1 "This unit is effective in reducing the upkeep of armies and ships."
  trait_ruler_logistic_understanding_2_hive:0 "$trait_ruler_logistic_understanding_hive$ II"
  trait_ruler_logistic_understanding_2_hive_desc:0 "$trait_ruler_logistic_understanding_hive_desc$"
  trait_ruler_logistic_understanding_2_machine:0 "$trait_ruler_logistic_understanding_machine$ II"
  trait_ruler_logistic_understanding_2_machine_desc:0 "$trait_ruler_logistic_understanding_machine_desc$"
- trait_ruler_eye_for_talent_hive:0 "Information Gathering"
+ trait_ruler_eye_for_talent_hive:0 "รวบรวมข้อมูล"
  trait_ruler_eye_for_talent_hive_desc:0 "This drone gathers information, processes it, and adapts new methods in search of perfection."
- trait_ruler_eye_for_talent_machine:0 "Information Processing"
+ trait_ruler_eye_for_talent_machine:0 "ประมวลผลข้อมูล"
  trait_ruler_eye_for_talent_machine_desc:0 "This unit gathers information, processes it, and adapts new methods in search of perfection."
  trait_ruler_eye_for_talent_2_hive:0 "$trait_ruler_eye_for_talent_hive$ II"
  trait_ruler_eye_for_talent_2_hive_desc:0 "$trait_ruler_eye_for_talent_hive_desc$"
@@ -247,9 +247,9 @@
  leader_trait_gale_speed_2_hive_desc:0 "$leader_trait_gale_speed_hive_desc$"
  leader_trait_gale_speed_2_machine:0 "$leader_trait_gale_speed_machine$ II"
  leader_trait_gale_speed_2_machine_desc:0 "$leader_trait_gale_speed_machine_desc$"
- trait_ruler_fortifier_hive:0 "Fortifier"
+ trait_ruler_fortifier_hive:0 "ป้อมปราการ"
  trait_ruler_fortifier_hive_desc:0 "This node specializes in defensive measures that allow the construction of Starbases and Defense Platforms at a reduced cost."
- trait_ruler_fortifier_machine:0 "Fortifier"
+ trait_ruler_fortifier_machine:0 "ป้อมปราการ"
  trait_ruler_fortifier_machine_desc:1 "This unit specializes in defensive measures that allow the construction of Starbases and Defense Platforms at a reduced cost."
  trait_ruler_fortifier_2_hive:0 "$trait_ruler_fortifier_hive$ II"
  trait_ruler_fortifier_2_hive_desc:0 "$trait_ruler_fortifier_hive_desc$"
@@ -263,9 +263,9 @@
  leader_trait_armada_logistician_2_hive_desc:0 "$leader_trait_armada_logistician_hive_desc$"
  leader_trait_armada_logistician_2_machine:0 "$leader_trait_armada_logistician_machine$ II"
  leader_trait_armada_logistician_2_machine_desc:0 "$leader_trait_armada_logistician_machine_desc$"
- trait_ruler_military_pioneer_hive:0 "Modular Ship Schematics"
+ trait_ruler_military_pioneer_hive:0 "โมดูลแผนผังยาน"
  trait_ruler_military_pioneer_hive_desc:1 "This node maintains and develops modular ship schematics that reduce upgrade and construction costs."
- trait_ruler_military_pioneer_machine:0 "Modular Ship Schematics"
+ trait_ruler_military_pioneer_machine:0 "โมดูลแผนผังยาน"
  trait_ruler_military_pioneer_machine_desc:1 "This unit maintains and develops modular ship schematics that reduce upgrade and construction costs."
  trait_ruler_military_pioneer_2_hive:0 "$trait_ruler_military_pioneer_hive$ II"
  trait_ruler_military_pioneer_2_hive_desc:0 "$trait_ruler_military_pioneer_hive_desc$"
@@ -299,13 +299,13 @@
  leader_trait_butcher_3_hive_desc:0 "$leader_trait_butcher_hive_desc$"
  leader_trait_butcher_3_machine:0 "$leader_trait_butcher_machine$ III"
  leader_trait_butcher_3_machine_desc:0 "$leader_trait_butcher_machine_desc$"
- trait_ruler_investor_hive:0 "Optimization Drone"
+ trait_ruler_investor_hive:0 "เพิ่มประสิทธิภาพโดรน"
  trait_ruler_investor_hive_desc:1 "This node is responsible for maximizing the potential of worker drones."
  trait_ruler_investor_2_hive:0 "$trait_ruler_investor_hive$ II"
  trait_ruler_investor_2_hive_desc:0 "$trait_ruler_investor_hive_desc$"
  trait_ruler_investor_3_hive:0 "$trait_ruler_investor_hive$ III"
  trait_ruler_investor_3_hive_desc:0 "$trait_ruler_investor_hive_desc$"
- trait_ruler_investor_machine:0 "Work Optimization Unit"
+ trait_ruler_investor_machine:0 "ยูนิตเพิ่มประสิทธิภาพการทำงาน"
  trait_ruler_investor_machine_desc:1 "This unit is responsible for maximizing the potential of worker units."
  trait_ruler_investor_2_machine:0 "$trait_ruler_investor_machine$ II"
  trait_ruler_investor_2_machine_desc:0 "$trait_ruler_investor_machine_desc$"
@@ -379,9 +379,9 @@
  trait_ruler_deep_connections_machine_desc:1 "Navigating effortlessly through the labyrinthine network of the collective network, this unit promotes a harmonious interface."
  trait_ruler_deep_connections_2_machine:0 "$trait_ruler_deep_connections_machine$ II"
  trait_ruler_deep_connections_2_machine_desc:0 "$trait_ruler_deep_connections_machine_desc$"
- leader_trait_interrogator_hive:0 "Interrogator"
+ leader_trait_interrogator_hive:0 "นักสอบสวน"
  leader_trait_interrogator_hive_desc:1 "This drone uses specialized interrogation techniques on occupied populations. Gathered data assists ongoing intelligence operations."
- leader_trait_interrogator_machine:0 "Interrogator"
+ leader_trait_interrogator_machine:0 "นักสอบสวน"
  leader_trait_interrogator_machine_desc:1 "This unit uses specialized interrogation techniques on occupied populations. Gathered data assists ongoing intelligence operations."
  leader_trait_interrogator_2_hive:0 "$leader_trait_interrogator_hive$ II"
  leader_trait_interrogator_2_hive_desc:0 "$leader_trait_interrogator_hive_desc$"
@@ -431,13 +431,13 @@
  leader_trait_conscripter_hive_desc:1 "This drone boosts army growth speed on the planet and imbues new drones with advanced combat commands."
  leader_trait_conscripter_machine:0 "Army Assembler"
  leader_trait_conscripter_machine_desc:1 "This unit boosts army production speed on the planet and uploads advanced tactical combat protocols into new battle units."
- trait_ruler_from_the_ranks_hive:0 "Combat Knowledge"
+ trait_ruler_from_the_ranks_hive:0 "ความรู้ในการสู้รบ"
  trait_ruler_from_the_ranks_hive_desc:1 "This node increases the efficiency and learning capability of all ground combat units."
- trait_ruler_from_the_ranks_machine:0 "Combat Knowledge"
+ trait_ruler_from_the_ranks_machine:0 "ความรู้ในการสู้รบ"
  trait_ruler_from_the_ranks_machine_desc:1 "This unit increases the efficiency and learning capability of all ground combat units."
- trait_ruler_recruiter_hive:0 "Infestor"
+ trait_ruler_recruiter_hive:0 "นักระบาดวิทยา"
  trait_ruler_recruiter_hive_desc:1 "This node specializes in infestation cycles that allow for the growth of armies at high speed and low cost."
- trait_ruler_recruiter_machine:0 "War Assembly Protocols"
+ trait_ruler_recruiter_machine:0 "โปรโตคอลการประกอบเพื่อสงคราม"
  trait_ruler_recruiter_machine_desc:1 "This unit asserts assembly protocols that make it possible to construct armies at high speed and low cost."
  leader_trait_science_communicator_hive:0 "Science Drone Upgrader"
  leader_trait_science_communicator_hive_desc:1 "With a constant stream of new knowledge, this node improves the science output of other leader drones."
@@ -479,17 +479,17 @@
  leader_trait_engineering_focus_2_hive_desc:0 "$leader_trait_engineering_focus_hive_desc$"
  leader_trait_engineering_focus_2_machine:0 "$leader_trait_engineering_focus_machine$ II"
  leader_trait_engineering_focus_2_machine_desc:0 "$leader_trait_engineering_focus_machine_desc$"
- trait_ruler_explorer_hive:0 "Anomaly Understanding"
+ trait_ruler_explorer_hive:0 "ความเข้าใจสิ่งผิดปกติ"
  trait_ruler_explorer_hive_desc:1 "This node is well-adapted to investigating the irregularities of the cosmos."
- trait_ruler_explorer_machine:0 "Anomaly Processing"
+ trait_ruler_explorer_machine:0 "ประมวลผลสิ่งผิดปกติ"
  trait_ruler_explorer_machine_desc:1 "This unit is well-adapted to investigating the irregularities of the cosmos."
  trait_ruler_explorer_2_hive:0 "$trait_ruler_explorer_hive$ II"
  trait_ruler_explorer_2_hive_desc:0 "$trait_ruler_explorer_hive_desc$"
  trait_ruler_explorer_2_machine:0 "$trait_ruler_explorer_machine$ II"
  trait_ruler_explorer_2_machine_desc:0 "$trait_ruler_explorer_machine_desc$"
- trait_ruler_expansionist_hive:1 "Expansion Minded"
+ trait_ruler_expansionist_hive:1 "เจตจำนงการขยายเขตแดน"
  trait_ruler_expansionist_hive_desc:1 "This node is adapted to expand our borders quickly."
- trait_ruler_expansionist_machine:0 "Calculated Expansion"
+ trait_ruler_expansionist_machine:0 "คำนวณการขยายตัว"
  trait_ruler_expansionist_machine_desc:1 "This unit is adapted to expand our borders quickly."
  trait_ruler_expansionist_2_hive:0 "$trait_ruler_expansionist_hive$ II"
  trait_ruler_expansionist_2_hive_desc:0 "$trait_ruler_expansionist_hive_desc$"
@@ -577,15 +577,15 @@
  leader_trait_tuner_2_machine_desc:0 "$leader_trait_tuner_machine_desc$"
  trait_ruler_world_shaper_hive:0 "World Shaper"
  trait_ruler_world_shaper_hive_desc:0 "This node is specialized for improving colonized worlds."
- trait_ruler_world_shaper_machine:0 "World Shaper"
+ trait_ruler_world_shaper_machine:0 "ผู้สร้างโลก"
  trait_ruler_world_shaper_machine_desc:1 "This unit is specialized for improving colonized worlds."
  leader_trait_bureaucrat_hive:0 "Mindfulness"
  leader_trait_bureaucrat_hive_desc:1 "This drone raises performance standards and increases the efficiency of all administrative drones."
  leader_trait_bureaucrat_machine:0 "Amplifier"
  leader_trait_bureaucrat_machine_desc:1 "This unit raises the average output and increases the efficiency of all administrative units."
- trait_ruler_industrialist_hive:1 "Collector"
+ trait_ruler_industrialist_hive:1 "นักสะสม"
  trait_ruler_industrialist_hive_desc:1 "This drone's primary focus is mineral production."
- trait_ruler_industrialist_machine:1 "Accumulator"
+ trait_ruler_industrialist_machine:1 "หน่วยความจำเก็บผลคำนวณและตรรกะ"
  trait_ruler_industrialist_machine_desc:1 "This unit's primary focus is mineral production."
  leader_trait_industrial_focus_hive:0 "$leader_trait_industrial_focus$"
  leader_trait_industrial_focus_hive_desc:0 "$trait_ruler_industrialist_hive_desc$"
@@ -623,9 +623,9 @@
  leader_trait_home_guard_hive_desc:1 "This node prepares elaborate planetary defense systems in case of enemy invasion."
  leader_trait_home_guard_machine:0 "Interplanetary Defense"
  leader_trait_home_guard_machine_desc:1 "This unit prepares elaborate planetary defenses in case of enemy invasion."
- trait_ruler_frontier_spirit_hive:0 "Colony Focus"
+ trait_ruler_frontier_spirit_hive:0 "โฟกัสเรื่องอาณานิคม"
  trait_ruler_frontier_spirit_hive_desc:1 "This drone's primary focus is the colonization of alien worlds."
- trait_ruler_frontier_spirit_machine:0 "Colony Focus"
+ trait_ruler_frontier_spirit_machine:0 "โฟกัสเรื่องอาณานิคม"
  trait_ruler_frontier_spirit_machine_desc:1 "This unit's programming is geared towards the colonization of alien worlds."
  leader_trait_army_veteran_machine:0 "Warbot Tinkerer"
  leader_trait_army_veteran_machine_desc:1 "This unit was specially designed to service and upgrade active combat units."
@@ -637,9 +637,9 @@
  leader_trait_retired_fleet_officer_hive_desc:1 "This drone was selectively bred to develop cutting-edge ship designs."
  leader_trait_agrarian_upbringing_hive:0 "Agrarian Focus"
  leader_trait_agrarian_upbringing_hive_desc:1 "This drone stimulates planetary food production."
- trait_ruler_fertility_preacher_hive:0 "Dynamic Growth"
+ trait_ruler_fertility_preacher_hive:0 "การเพิ่มจำนวนแบบไดนามิก"
  trait_ruler_fertility_preacher_hive_desc:1 "This node encourages drone fertilization, stimulating population growth."
- trait_ruler_fertility_preacher_machine:0 "Accelerated Replicators"
+ trait_ruler_fertility_preacher_machine:0 "เครื่องจำลองแบบเร่งความเร็ว"
  trait_ruler_fertility_preacher_machine_desc:1 "This unit expertly drives machine population assembly."
  trait_ruler_fertility_preacher_2_hive:0 "$trait_ruler_fertility_preacher_hive$ II"
  trait_ruler_fertility_preacher_2_hive_desc:0 "$trait_ruler_fertility_preacher_hive_desc$"
@@ -672,9 +672,9 @@
  leader_trait_architectural_interest_2_hive_desc:0 "$leader_trait_architectural_interest_hive_desc$"
  leader_trait_architectural_interest_2_machine:0 "$leader_trait_architectural_interest_machine$ II"
  leader_trait_architectural_interest_2_machine_desc:0 "$leader_trait_architectural_interest_machine_desc$"
- trait_ruler_architectural_sense_hive:0 "Architectural Focus"
+ trait_ruler_architectural_sense_hive:0 "โฟกัสเรื่องสถาปัตยกรรม"
  trait_ruler_architectural_sense_hive_desc:1 "This node specializes in architectural theory, reducing colony development speed and cost."
- trait_ruler_architectural_sense_machine:0 "Architectural Focus"
+ trait_ruler_architectural_sense_machine:0 "โฟกัสเรื่องสถาปัตยกรรม"
  trait_ruler_architectural_sense_machine_desc:1 "This unit is optimized for architectural theory, reducing colony development speed and cost."
  trait_ruler_architectural_sense_2_hive:0 "$trait_ruler_architectural_sense_hive$ II"
  trait_ruler_architectural_sense_2_hive_desc:0 "$trait_ruler_architectural_sense_hive_desc$"
