--- a/mod/thmod/localisation/english/paragon_triggers_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_triggers_l_english.yml
@@ -11,5 +11,5 @@
  COUNTRY_CAN_UNLOCK_MORE_COUNCIL_POSITIONS:0 "Total Civic Points is greater than number of unlocked Council Positions"
  HAS_AGENDA_SELECTED_THIS:0 "Current Agenda is: $AGENDA$"
  HAS_AGENDA_SELECTED_OTHER:0 "Current Agenda is NOT: $AGENDA$"
- HAS_AGENDA_SELECTED_NO:0 "Currently has NO Agenda"
+ HAS_AGENDA_SELECTED_NO:0 "ตอนนี้ไม่มีแผน"
  HAS_AGENDA_SELECTED_YES:0 "Currently has an Agenda"
